Linking users with a api and update the site style

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
-<body id="body" background="assets/imgs/bg.jpg">
-  <img src="assets/imgs/cover.png" class="centerImg" id="imgcover">
+<body id="body">
+  <img src="assets/imgs/cover.jpg" class="centerImg" id="imgcover">
   <app-root></app-root>
 </body>
 </html>
