Change template and create a service for schedule

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CCsCheduleFrontend</title>
+  <title>CCsChedule</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body id="body">
-  <img src="assets/imgs/cover.jpg" class="centerImg" id="imgcover">
   <app-root></app-root>
 </body>
 </html>
